--- a/site/rebar.config
+++ b/site/rebar.config
@@ -1,4 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-	{cowboy, {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.3"}}}
+	{cowboy, {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.3"}}},
+        {jsx, "2.8.0"}
 ]}.
